<resources>
    <string name="app_name">remote_application</string>
    <string name="remote_action_next">next</string>
    <string name="remote_action_cancel">cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remote_action_read">read</string>
    <string name="remote_action_save">save</string>
    <string name="remote_action_back">back</string>
    <string name="button_dialog_select_icon">Select Button Icon</string>
    <string name="add_remote_name_dialog">Remote Name</string>
    <string name="Add_Remote">Remote Details</string>
    <string name="dialog_button_details">Button Details</string>
    <string name="remote_action_col">column\'s</string>
    <string name="ExtraButton">New Button</string>
</resources>
