<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Add_Remote"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/dialog_button_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_remote_name_dialog"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/icon_list_expand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dialog_select_icon"
        android:textColor="@android:color/holo_orange_dark"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/dialog_icon_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/transparent"
        >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="false"
            android:background="@android:color/white"

            />

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remote_action_cancel"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>
        <Button
            android:id="@+id/dialog_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_save"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"
            />

    </LinearLayout>



</LinearLayout>