<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialog_button_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Button Name"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/icon_list_expand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dialog_select_icon"/>

    <ListView
        android:id="@+id/dialog_icon_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="false"
            android:background="@android:color/white"

            />

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remote_action_cancel"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"/>
        <Button
            android:id="@+id/dialog_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_save"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            />

    </LinearLayout>



</LinearLayout>