<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewRemote"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fragment_margin_top">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/new_remote_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_cancel"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/new_remote_col"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_col"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="visible"/>

        <Button
            android:id="@+id/new_remote_extra_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ExtraButton"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="gone"/>

        <Button
            android:id="@+id/new_remote_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_next"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/holo_blue_dark"
            android:clickable="false"
            />

    </LinearLayout>

    <GridView
        android:id="@+id/newRemoteLayoutGridView"
        android:paddingLeft="@dimen/remote_margin"
        android:paddingRight="@dimen/remote_margin"
        android:paddingBottom="@dimen/remote_bottom_margin"
        android:layout_margin="@dimen/remote_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:scrollbars="none"

        >

    </GridView>

    </RelativeLayout>
</RelativeLayout>