<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RemoteRead"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fragment_margin_top">
    <LinearLayout
        android:id="@+id/remote_read_btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/remote_read_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_back"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/remote_read_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_read"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/remote_read_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remote_action_save"
            android:backgroundTint="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>

    <GridView
        android:id="@+id/remote_read_grid_view"
        android:paddingLeft="@dimen/remote_margin"
        android:paddingRight="@dimen/remote_margin"
        android:paddingBottom="@dimen/remote_bottom_margin"
        android:layout_marginLeft="@dimen/remote_padding"
        android:layout_marginRight="@dimen/remote_padding"
        android:layout_marginBottom="@dimen/remote_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/remote_read_btn_linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:listSelector="@android:color/transparent"/>

    </RelativeLayout>
</RelativeLayout>